--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: atproto_core
 resolution: workspace
 description: Core library for clients and tools. This package is mainly used by https://atprotodart.com packages.
-version: 1.0.7
+version: 1.0.8
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
@@ -26,6 +26,8 @@ dependencies:
   cbor: ^6.3.7
   multiformats: ^1.0.2
   atproto_oauth: ^0.1.2
+  nanoid: ^1.0.0
+  meta: ^1.17.0
 
 dev_dependencies:
   lints: ^6.0.0
